Update 11_08 & 13_08 Titanic Dataset.ipynb

--- a/11_08 & 13_08 Titanic Dataset.ipynb
+++ b/11_08 & 13_08 Titanic Dataset.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "train_data = pd.read_csv('train.csv')\n",
-    "test_data = pd.read_csv('test.csv')"
+    "test_data = pd.read_csv('Test.csv')"
    ]
   },
   {
